# alacritty-tabs

./: .gitignore  README.md
.github/workflows/: ci.yml
alacritty/: Cargo.toml
alacritty/alacritty.xcodeproj/: project.pbxproj
alacritty/alacritty.xcodeproj/project.xcworkspace/xcuserdata/bbarrows.xcuserdatad/: UserInterfaceState.xcuserstate
alacritty/src/: child_pty.rs  clipboard.rs  display.rs  event.rs  input.rs  logging.rs  macros.rs  main.rs  tab_manager.rs  tty_spawn.rs  url.rs  window.rs  word.rs
alacritty/src/child_pty/unix/: mod.rs
alacritty/src/child_pty/windows/: child.rs  mod.rs
alacritty/src/config/: bindings.rs  color.rs  mod.rs  ui_config.rs
alacritty/src/display/: content.rs  meter.rs  mod.rs  window.rs
alacritty/src/renderer/: mod.rs
alacritty_config_derive/tests/: config.rs
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: ansi.rs  event.rs  event_loop.bak  event_loop.rs  lib.rs  tab_manager.rs
alacritty_terminal/src/config/: colors.rs  mod.rs
alacritty_terminal/src/grid/: mod.rs  row.rs
alacritty_terminal/src/term/: mod.rs  render.rs  search.rs
alacritty_terminal/tests/: ref.rs
