[package]
name = "alacritty"
version = "0.7.0-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "GPU-accelerated terminal emulator"
readme = "README.md"
homepage = "https://github.com/alacritty/alacritty"
edition = "2018"

[dependencies.alacritty_terminal]
path = "../alacritty_terminal"
version = "0.11.1-dev"
default-features = false

[dependencies]
# objc = { git = "https://github.com/bebrws/rust-objc", branch = "master" }
objc = "0.2.6"
glutin = { git = "https://github.com/bebrws/glutin", features = ["serde"], branch = "master" }
clap = "2"
log = { version = "0.4", features = ["std"] }
time = "0.1.40"
fnv = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
notify = "4"
parking_lot = "0.11.0"
crossfont = { version = "0.1.0", features = ["force_system_fontconfig"] }
urlocator = "0.1.3"
copypasta = { version = "0.7.0", default-features = false }
libc = "0.2"
unicode-width = "0.1"
bitflags = "1"
dirs = "2.0.2"
xdg = "2"

[build-dependencies]
gl_generator = "0.14.0"

[features]
live-shader-reload = []
nightly = []
bench = []
