[package]
name = "alacritty"
version = "0.7.0-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "GPU-accelerated terminal emulator"
readme = "README.md"
homepage = "https://github.com/alacritty/alacritty"
edition = "2018"

[build]
rustflags = ["-Awarnings"]

[dependencies.alacritty_terminal]
path = "../alacritty_terminal"
version = "0.11.1-dev"
default-features = false

[dependencies]
mio = "0.6.20"
mio-extras = "2"
trace = "*"
backtrace = "0.3"
color-backtrace = "0.5"
nix = "0.19.1"
libc = "0.2"
signal-hook = "0.3.1"
futures = "0.3.8"
futures-core = "0.3.8"
futures-timer = "3.0.2"
thiserror = "1.0.23"
miniserde = "0.1.13"
anyhow = "1.0.37"
die = "0.2.0"

chrono = "0.4.19"


clap = "2"
log = { version = "0.4", features = ["std"] }
time = "0.2.23"
fnv = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"
glutin = { version = "0.25.1", default-features = false, features = ["serde"] }
notify = "4"
parking_lot = "0.11.0"
crossfont = { version = "0.1.0", features = ["force_system_fontconfig"] }
urlocator = "0.1.3"
copypasta = { version = "0.7.0", default-features = false }
unicode-width = "0.1"
bitflags = "1"
dirs = "3.0.1"

[build-dependencies]
gl_generator = "0.14.0"

[target.'cfg(not(windows))'.dependencies]
xdg = "2"

[target.'cfg(not(target_os = "macos"))'.dependencies]
image = { version = "0.23.3", default-features = false, features = ["ico"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"

[target.'cfg(not(any(target_os="windows", target_os="macos")))'.dependencies]
x11-dl = { version = "2", optional = true }
wayland-client = { version = "0.28.0", features = ["dlopen"], optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["impl-default", "wincon"]}

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.3"

[features]
default = ["wayland", "x11"]
x11 = ["copypasta/x11", "glutin/x11", "x11-dl", "image"]
wayland = ["copypasta/wayland", "glutin/wayland", "wayland-client"]
winpty = ["alacritty_terminal/winpty"]
# Enabling this feature makes shaders automatically reload when changed
live-shader-reload = []
nightly = []
bench = []
